--- a/Source/JWScheduler/App.xaml
+++ b/Source/JWScheduler/App.xaml
@@ -2,8 +2,11 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:JWScheduler"
-             StartupUri="MainWindow.xaml">
+             xmlns:main="clr-namespace:JWScheduler.Main"
+             Startup="Application_Startup">
     <Application.Resources>
-         
+        <main:Bootstrapper x:Key="Bootstrapper"/>
+        <main:Shell x:Key="Shell"/>
+        <main:Launcher x:Key="Launcher" Bootstrapper="{StaticResource Bootstrapper}" Shell="{StaticResource Shell}"/>
     </Application.Resources>
 </Application>
