--- a/Source/JWScheduler/App.xaml
+++ b/Source/JWScheduler/App.xaml
@@ -1,11 +1,18 @@
 ﻿<Application x:Class="JWScheduler.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:JWScheduler"
+             xmlns:s="clr-namespace:System;assembly=mscorlib"
              xmlns:main="clr-namespace:JWScheduler.Main"
              Startup="Application_Startup">
     <Application.Resources>
-        <main:Bootstrapper x:Key="Bootstrapper"/>
+        <main:Bootstrapper x:Key="Bootstrapper">
+            <main:Bootstrapper.Assemblies>
+                <x:Array Type="{x:Type s:String}">
+                    <!-- List all assemblies to load here -->
+                    <s:String>JWScheduler.Logging.log4net</s:String>
+                </x:Array>
+            </main:Bootstrapper.Assemblies>
+        </main:Bootstrapper>
         <main:Shell x:Key="Shell"/>
         <main:Launcher x:Key="Launcher" Bootstrapper="{StaticResource Bootstrapper}" Shell="{StaticResource Shell}"/>
     </Application.Resources>
